--- a/Dashboard Page/vuejs-dashboard-page/package.json
+++ b/Dashboard Page/vuejs-dashboard-page/package.json
@@ -8,20 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.11.2",
+    "@fortawesome/fontawesome-free": "5.14.0",
+    "@popperjs/core": "2.4.4",
     "chart.js": "2.9.3",
-    "core-js": "3.3.2",
-    "popper.js": "1.16.0",
-    "vue": "2.6.10"
+    "core-js": "3.6.5",
+    "vue": "2.6.12"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "4.0.0",
-    "@vue/cli-plugin-eslint": "4.0.0",
-    "@vue/cli-service": "4.0.0",
-    "babel-eslint": "10.0.3",
-    "eslint": "5.16.0",
-    "eslint-plugin-vue": "5.0.0",
-    "vue-template-compiler": "2.6.10"
+    "@vue/cli-plugin-babel": "4.5.4",
+    "@vue/cli-plugin-eslint": "4.5.4",
+    "@vue/cli-service": "4.5.4",
+    "babel-eslint": "10.1.0",
+    "eslint": "6.8.0",
+    "eslint-plugin-vue": "6.2.2",
+    "vue-template-compiler": "2.6.12"
   },
   "eslintConfig": {
     "root": true,
