--- a/Dashboard Page/react-dashboard-page/package.json
+++ b/Dashboard Page/react-dashboard-page/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.11.2",
+    "@fortawesome/fontawesome-free": "5.14.0",
+    "@popperjs/core": "2.4.4",
     "chart.js": "2.9.3",
-    "popper.js": "1.16.0",
-    "react": "16.11.0",
-    "react-dom": "16.11.0",
-    "react-router": "5.1.2",
-    "react-router-dom": "5.1.2",
-    "react-scripts": "3.2.0"
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
