--- a/Dashboard Page/angular-dashboard-page/angular.json
+++ b/Dashboard Page/angular-dashboard-page/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": [ "chart.js" ],
             "outputPath": "dist/angular-landing-page",
             "index": "src/index.html",
             "main": "src/main.ts",
