--- a/Dashboard Page/angular-dashboard-page/package.json
+++ b/Dashboard Page/angular-dashboard-page/package.json
@@ -11,40 +11,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.12",
-    "@angular/common": "8.2.12",
-    "@angular/compiler": "8.2.12",
-    "@angular/core": "8.2.12",
-    "@angular/forms": "8.2.12",
-    "@angular/platform-browser": "8.2.12",
-    "@angular/platform-browser-dynamic": "8.2.12",
-    "@angular/router": "8.2.12",
-    "@fortawesome/fontawesome-free": "5.11.2",
+    "@angular/animations": "10.0.14",
+    "@angular/common": "10.0.14",
+    "@angular/compiler": "10.0.14",
+    "@angular/core": "10.0.14",
+    "@angular/forms": "10.0.14",
+    "@angular/platform-browser": "10.0.14",
+    "@angular/platform-browser-dynamic": "10.0.14",
+    "@angular/router": "10.0.14",
+    "@fortawesome/fontawesome-free": "5.14.0",
+    "@popperjs/core": "2.4.4",
     "chart.js": "2.9.3",
-    "popper.js": "1.16.0",
-    "rxjs": "6.4.0",
-    "tslib": "^1.10.0",
-    "zone.js": "0.9.1"
+    "rxjs": "6.6.2",
+    "tslib": "^2.0.1",
+    "zone.js": "0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.803.15",
-    "@angular/cli": "8.3.15",
-    "@angular/compiler-cli": "8.2.12",
-    "@angular/language-service": "8.2.12",
-    "@types/node": "8.9.4",
-    "@types/jasmine": "3.3.8",
-    "@types/jasminewd2": "2.0.3",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "3.4.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.1.0",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-coverage-istanbul-reporter": "2.0.1",
-    "karma-jasmine": "2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "5.4.0",
-    "ts-node": "7.0.0",
-    "tslint": "5.15.0",
-    "typescript": "3.5.3"
+    "@angular-devkit/build-angular": "0.1000.8",
+    "@angular/cli": "10.0.8",
+    "@angular/compiler-cli": "10.0.14",
+    "@angular/language-service": "10.0.14",
+    "@types/jasmine": "3.5.14",
+    "@types/jasminewd2": "2.0.8",
+    "@types/node": "14.6.2",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "5.0.2",
+    "karma": "5.1.1",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-jasmine": "4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "7.0.0",
+    "ts-node": "9.0.0",
+    "tslint": "6.1.3",
+    "typescript": "3.9.7"
   }
 }
